VimeoMiner terminado (requerimientos mínimos)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=VimeoMiner
+server.port=8081
+logging.level.aiss.restclient.controller.VimeoController = DEBUG
+vimeominer.baseuri = https://api.youtube.com
+vimeominer.token = 1a91f47a52a63df97b35f0694c7bf4cb
+
+vimeominer.maxVideos = 10
+vimeominer.maxComments = 10
+
+vimeominer.uri = http://localhost:8082/apipath/channels
